--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,13 @@ footer{
     border-radius: 8px;
     border-bottom-right-radius: 0;
     border: 0.1rem solid #8FC748;
+    transition: background-color 0.5s ease, color 0.5s ease, border 0.5s ease; 
+}
+
+.div-episodes-custom:hover{
+    background-color:#8FC748 !important;
+    color:#3c035f !important;
+    border: 0.1rem solid #3c035f !important;
 }
 
 .font-edit{
