--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ footer{
 
 .card-custom{
     width: 18rem;
+    cursor: pointer;
 }
 
 .card-body-custom{
@@ -51,6 +52,7 @@ footer{
     border-bottom-right-radius: 0;
     border: 0.1rem solid #8FC748;
     transition: background-color 0.5s ease, color 0.5s ease, border 0.5s ease; 
+    cursor: pointer
 }
 
 .div-episodes-custom:hover{
@@ -61,4 +63,10 @@ footer{
 
 .font-edit{
     font-family: 'Silkscreen', sans-serif;
+}
+
+.clickable{
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
 }
